# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/memory_utils/purgeable_mem_config.gni")
import("//build/ohos.gni")
import("//foundation/multimedia/media_library/media_library.gni")

config("media_permission_helper_config") {
  include_dirs = [ "${MEDIALIB_INTERFACES_PATH}/inner_api/media_permission_helper/include" ]
}

ohos_shared_library("media_permission_helper") {
  install_enable = true

  include_dirs = [
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/include",
    "${MEDIALIB_INTERFACES_PATH}/inner_api/media_library_helper/include",
    "${MEDIALIB_UTILS_PATH}/include",
    "${MEDIALIB_COMMON_PATH}/utils/include",
  ]

  user_ipc_client_include_dirs = [
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/util",
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/include/ipc/vo",
    "${MEDIALIB_NEW_SERVICES_PATH}/media_assets_manager/include/vo",
    "${MEDIALIB_NEW_SERVICES_PATH}/media_assets_manager/include/dto",
  ]

  sources = [
    "./src/media_permission_helper.cpp",
  ]

  columns_sources = [
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/src/base_column.cpp",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/src/media_app_uri_permission_column.cpp",
    "${MEDIALIB_INNERKITS_PATH}/media_library_helper/src/media_app_uri_sensitive_column.cpp",
  ]

  user_ipc_client_source = [
    "${MEDIALIB_INNERKITS_PATH}/medialibrary_data_extension/src/ipc/util/user_inner_ipc_client.cpp",
  ]

  media_assets_manager_vo_source = [
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/cancel_photo_uri_permission_inner_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/grant_photo_uri_permission_inner_vo.cpp",
    "${MEDIALIB_BUSINESS_PATH}/media_assets_manager/src/vo/check_photo_uri_permission_inner_vo.cpp",
  ]

  public_configs = [ ":media_permission_helper_config" ]

  include_dirs += user_ipc_client_include_dirs
  sources += columns_sources
  sources += user_ipc_client_source
  sources += media_assets_manager_vo_source

  deps = [ "${MEDIALIB_COMMON_PATH}:media_library_common" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libprivacy_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_core",
    "data_share:datashare_consumer",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
    "ipc:ipc_core",
    "relational_store:native_rdb",
  ]

  ldflags = [ "-Wl,--gc-sections" ]

  cflags = [
    "-fdata-sections",
    "-ffunction-sections",
    "-Os",
  ]

  cflags_cc = [ "-Os" ]

  if (!media_library_link_opt) {
    sanitize = {
      cfi = true
      cfi_cross_dso = true
      debug = false
      integer_overflow = true
      ubsan = true
      boundary_sanitize = true
      stack_protector_ret = true
    }
  }

  defines = []
  defines += [ "MEDIALIBRARY_COMPATIBILITY=1" ]

  part_name = "media_library"
  subsystem_name = "multimedia"
}