# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

MEDIA_LIB_BASE_DIR = "//foundation/multimedia/medialibrary_standard"
MEDIA_LIB_INNERKITS_DIR = "$MEDIA_LIB_BASE_DIR/frameworks/innerkitsimpl"

config("media_data_ability_public_config") {
  include_dirs = [
    "$MEDIA_LIB_INNERKITS_DIR/medialibrary_data_ability/include",
    "$MEDIA_LIB_BASE_DIR/interfaces/innerkits/native/include",
    "$MEDIA_LIB_INNERKITS_DIR/media_library/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include",
    "//foundation/aafwk/standard/interfaces/innerkits/want/include/ohos/aafwk/content",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//foundation/aafwk/standard/frameworks/kits/ability/native/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/appmgr",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/distributedschedule/dmsfwk/services/dtbschedmgr/include",
    "//foundation/distributeddatamgr/appdatamgr/interfaces/innerkits/native_rdb/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_rdb/include",
    "//foundation/distributeddatamgr/appdatamgr/frameworks/innerkitsimpl/native_appdatafwk/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//utils/native/base/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
  ]

  if (target_cpu == "arm") {
    cflags = [ "-DBINDER_IPC_32BIT" ]
  }
}

ohos_shared_library("medialibrary_data_ability") {
  install_enable = true

  sources = [
    "src/medialibrary_album_db.cpp",
    "src/medialibrary_album_operations.cpp",
    "src/medialibrary_data_ability.cpp",
    "src/medialibrary_file_db.cpp",
    "src/medialibrary_file_operations.cpp",
  ]

  public_configs = [ ":media_data_ability_public_config" ]

  deps = [
    "$MEDIA_LIB_BASE_DIR/services/media_scanner_service/client:media_scanner_client",
    "$MEDIA_LIB_INNERKITS_DIR/media_library:media_library",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "native_appdatamgr:native_appdatafwk",
    "native_appdatamgr:native_dataability",
    "native_appdatamgr:native_rdb",
    "samgr_L2:samgr_proxy",
  ]

  subsystem_name = "multimedia"
  part_name = "multimedia_media_library_standard"
}
